# aquamarine

./: CMakeLists.txt  hyprland-anland.patch
.github/workflows/: build-aquamarine-deb.yml  build-deb.yml  build-hyprland-deb.yml  clear.yml
anland/: AnlandBackend.cpp  AnlandBackend.hpp  AnlandOutput.cpp  AnlandOutput.hpp
debian/: changelog  control  copyright  gbp.conf  rules  watch
debian/upstream/: metadata
include/aquamarine/allocator/: Allocator.hpp
include/aquamarine/backend/: Backend.hpp  Headless.hpp  Null.hpp  Wayland.hpp
src/backend/: Backend.cpp  Headless.cpp  Wayland.cpp
src/backend/anland/: AnlandAllocator.cpp  AnlandAllocator.hpp  AnlandBackend.cpp  AnlandBackend.hpp  AnlandBuffer.cpp  AnlandBuffer.hpp  AnlandKeyboard.cpp  AnlandKeyboard.hpp  AnlandOutput.cpp  AnlandOutput.hpp  AnlandPointer.cpp  AnlandPointer.hpp  AnlandTouch.cpp  AnlandTouch.hpp  CMakeLists.txt  anland_audio.c  anland_audio.h  anland_camera.c  anland_camera.h  display_producer.c  display_producer.h  protocol.h  socket_utils.c  socket_utils.h
